--- a/project3/index.css
+++ b/project3/index.css
@@ -1,20 +1,48 @@
+body{
+    font-family: Inter, sans-serif;
+}
 .nav {
     display: flex;
-    justify-content: space-between;
     align-items: center;
-    padding: 20px 20px 20px 20px;
+    padding: 20px 40px;
     background-color: antiquewhite;
+    height: 70px;
+    box-shadow: 0px 3px 7px rgba(0, 0, 0, 0.1);
 }
 
 .nav-logo {
-    width: 160px;
+    max-width: 100px;
 }
 
-.nav-items {
-    list-style: none;
+.hero{
+    padding: 40px 60px; 
     display: flex;
+    flex-direction: column;
 }
 
-.nav-items li {
-    padding: 10px;
+.hero-img{
+    padding: 20px 30px;
+    align-items: center;
+    text-align: center;
+    max-width: 400px;
+}
+
+.hero-header{
+    margin-bottom: 16px;
+
+    font-weight: 800;
+    font-size: 80px;
+}
+
+.hero-text{
+    margin-top: 0;
+
+    font-weight: 300;
+    font-size: 30px;
+}
+
+.card-star{
+    display: flex;
+    padding-top: 10px;
+    padding-left: 0;
 }
